Mobile fix: center navbar-nav and container-fluid-sm alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -390,7 +390,7 @@ img{
         font-size: 18px;
         position: relative;
         top: -10em;
-        right: -18em
+        left: 2.1%;
     }
 
 .front-end, .back-end{
